src/objects/Account_Booking_Type__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Booking Type</relationshipLabel>
        <relationshipName>Account_Booking_Type</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <label>Booking Type</label>
        <referenceTo>Booking_Type__c</referenceTo>
        <relationshipLabel>Account Booking Type</relationshipLabel>
        <relationshipName>Account_Booking_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stop_Sell_Reason__c</fullName>
        <label>Stop Sell Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Structure_Type__c</fullName>
        <label>Structure Type</label>
        <picklist>
            <picklistValues>
                <fullName>All-inclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apart - Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment/Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed &amp; Breakfasts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chalet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Houses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pensions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Town House Suites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Booking Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ABT-{00000}</displayFormat>
        <label>Account Booking Type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Booking Type</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>